Change get(0)-> getFirst() in test